iproute2 (5.10.0-4jens26) UNRELEASED; urgency=medium

  * Update nomenclature (underlying physical link (speed) vs.
    physical/virtual link capacity (queue bandwidth) vs. fair share)
  * dual (real/virtual) queue bwlim reporting in qsz records
  * Do not ship Java™ example/JNI lib any more, it is currently unused

 -- Thorsten Glaser <t.glaser@qvest-digital.com>  Fri, 12 Jan 2024 20:58:21 +0100

iproute2 (5.10.0-4jens25) tarent; urgency=medium

  * Queue size reporting is now fully ordered against packet reporting
    and no longer in enqueue
  * rq/vq_notbefore-based qdelay calculation and packet reporting
  * Code simplification/merging
  * Performance improvements
  * Add jensvq{4,5}proto (allocating higher real-queue bandwidth factors)
  * Introduce jensvq{2,3,4,5}pvqd (dropcheck is vq-based)

 -- Thorsten Glaser <t.glaser@tarent.de>  Thu, 09 Nov 2023 00:49:57 +0100

iproute2 (5.10.0-4jens24) tarent; urgency=low

  * Incorporate BBRv3 patches for convenience:
    - patch "ss" tool to output congestion control state for BBRv3
    - patch "ip" tool to support ecn_low per-route feature
    - patch "ss" tool to show "ecn_low" state in TCP socket
    Note these are only useful on a BBRv3-enabled Linux kernel!
  * Change qosmode=2 behaviour: treat incoming CE-marked packets also
    as L4S, for consistency with LLD (i.e. L4S-enabled DOCSIS)
  * Drop e16 (chance) from packet reporting
  * Orphan skb so nōn-FORWARD traffic gets slightly more chance to shine
  * Some reliability improvements under the hood
  * Add sch_jensvq{2,3}proto (experimental marking methods)
    introducing vq_notbefore1024 field into the reporting

 -- Thorsten Glaser <t.glaser@tarent.de>  Thu, 19 Oct 2023 00:16:38 +0200

iproute2 (5.10.0-4jens23) tarent; urgency=low

  * Rename package to iproute2-jens and iproute2-jens-doc
    for easier installation on Debian bookworm, etc.
    (ofc with versioned Provides of the old names)
  * iproute2-jens Recommends sch-jens-dkms