@@ -5,7 +5,7 @@
 QDISC_KIND=' choke codel bfifo pfifo pfifo_head_drop fq fq_codel gred hhf \
             mqprio multiq netem pfifo_fast pie fq_pie red rr sfb sfq tbf atm \
             cbq drr dsmark hfsc htb prio qfq \
-            janz multijens \
+            janz multijens jensvq \
             jensvq2proto jensvq3proto jensvq4proto jensvq5proto \
             jensvq2pvqd jensvq3pvqd jensvq4pvqd jensvq5pvqd '
 FILTER_KIND=' basic bpf cgroup flow flower fw route rsvp tcindex u32 matchall '
@@ -302,6 +302,11 @@ _tc_qdisc_options()
             _tc_once_attr 'limit flows target interval quantum \
                 ce_threshold memory_limit drop_batch'
             _tc_one_of_list 'ecn noecn'
+            return 0
+            ;;
+        jensvq)
+            _tc_once_attr 'limit markfree markfull \
+                subbufs fragcache extralatency'
             return 0
             ;;
         janz|jensvq*)
