@@ -50,6 +50,7 @@ License: GPL-2
 
 Files: janz/*
        tc/q_janz.c
+       tc/q_jensvq.c
        tc/q_multijens.c
 Copyright: 2022, 2023 mirabilos <t.glaser@tarent.de>
            2023, 2024 mirabilos <t.glaser@qvest-digital.com>
