@@ -1,2 +1,3 @@
 jens/mratedemo.c
 jens/ratedemo.c
+jens/vqdemo.c
