@@ -13,6 +13,7 @@ BUILT_MODULE_NAME[7]="sch_jensvq2pvqd"
 BUILT_MODULE_NAME[8]="sch_jensvq3pvqd"
 BUILT_MODULE_NAME[9]="sch_jensvq4pvqd"
 BUILT_MODULE_NAME[10]="sch_jensvq5pvqd"
+BUILT_MODULE_NAME[11]="sch_jensvq"
 DEST_MODULE_LOCATION[0]="/extra"
 DEST_MODULE_LOCATION[1]="/extra"
 DEST_MODULE_LOCATION[2]="/extra"
@@ -24,4 +25,5 @@ DEST_MODULE_LOCATION[7]="/extra"
 DEST_MODULE_LOCATION[8]="/extra"
 DEST_MODULE_LOCATION[9]="/extra"
 DEST_MODULE_LOCATION[10]="/extra"
+DEST_MODULE_LOCATION[11]="/extra"
 AUTOINSTALL="yes"
