@@ -191,7 +191,8 @@ it is highly recommended to switch to
 .Pq see below .
 .Sh SEE ALSO
 .Xr tc 8 ,
-.Xr tc\-janz 8
+.Xr tc\-janz 8 ,
+.Xr tc\-jensvq 8
 .Pp
 .Pa /usr/share/doc/sch\-jens\-dkms/README.gz
 .Pp
